--- a/index.html
+++ b/index.html
@@ -4,9 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
   <link rel="stylesheet" href="style.css">
-  <script scr="script.js"defer></script>
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
+  <script src="script.js" defer></script>
   <title>Frontend Mentor | Tip calculator app</title>
 
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
@@ -16,24 +15,27 @@
   </style>
 </head>
 <body>
+  <div class="content">
+<header> <img id="logo"src="./images/logo.svg" alt="splitter logo"></header> 
   <div class="container">
+    
     <fieldset class="container-calc">
       <div>
   <h1 class="title-calc">Bill</h1>
   <div class="container-input">
     <img class="icon" src="./images/icon-dollar.svg" alt="Dollar Sign Icon">
-  <input class="number-input" type="number" placeholder="0">
+  <input id="bill" class="number-input" type="number" placeholder="0">
 </div>
 </div>
 <div>
-  <h1 class="title-calc">Select Tip %</h1>
+  <h1 id="title-responsive"class="title-calc">Select Tip %</h1>
   <div class="container-percentage">
-    <div id="5%"class="tip-percentage">5%</div>
-    <div id="10%"class="tip-percentage">10%</div>
-    <div id="15%"class="tip-percentage">15%</div>
-    <div id="25%"class="tip-percentage">5%</div>
-    <div id="50%"class="tip-percentage">50%</div>
-    <input class="tip-custom" type="number" placeholder="Custom">
+    <div id="5"class="tip-percentage">5%</div>
+    <div id="10"class="tip-percentage">10%</div>
+    <div id="15"class="tip-percentage">15%</div>
+    <div id="25"class="tip-percentage">25%</div>
+    <div id="50"class="tip-percentage">50%</div>
+    <input id="custom" class="tip-custom" type="number" placeholder="Custom">
 
 
 
@@ -42,27 +44,50 @@
   </div>
 </div>
 <div>
-  <h1 class="title-calc">Number of People</h1>
+  <h1 id="title-responsive"class="title-calc">Number of People</h1>
   <div class="container-input">
     <img class="icon" src="./images/icon-person.svg" alt="Person Icon">
-  <input class="number-input" type="number" placeholder="0">
+  <input id="people" class="number-input" type="number" placeholder="0">
 </div>
 </div>
 </fieldset>
+
+
 <div class="container-result">
   <div class="container-output">
-  <h1 class="title-result">Tip</h1>
-  / person
+    <div class="container-card">
+      <div class="result-card">
+  <h1 class="title-result">Tip Amount</h1>
+  <h2 class="subtitle-result">/ person</h2>
+</div>
+<div id="result-tip" class="result-value">$0.00</div>
+
+</div>
+<div class="container-card">
+  <div class="result-card">
 
   <h1 class="title-result">Total</h2>
-  / person
+  <h2 class="subtitle-result">/ person</h2>
+  </div>
+  <div id="result-total" class="result-value">$0.00</div>
+  </div>
 </div>
-  Reset
+
+
+<button id="reset">Reset</button>
+
+  
+</button>
+</div>
+
+
+
+
 </div>
 </div>
-  <div class="attribution">
+  <!-- <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="#">Your Name Here</a>.
-  </div>
+  </div> -->
 </body>
 </html>
