Add mobile support and error messages

--- a/index.html
+++ b/index.html
@@ -21,14 +21,14 @@
     
     <fieldset class="container-calc">
       <div>
-  <h1 class="title-calc">Bill</h1>
+  <h1 class="title-calc">Bill<span id="bill-error"  class="error"></span></h1>
   <div class="container-input">
     <img class="icon" src="./images/icon-dollar.svg" alt="Dollar Sign Icon">
   <input id="bill" class="number-input" type="number" placeholder="0">
 </div>
 </div>
 <div>
-  <h1 id="title-responsive"class="title-calc">Select Tip %</h1>
+  <h1 id="title-responsive"class="title-calc">Select Tip %<span id="tip-error" class="error"></span></h1>
   <div class="container-percentage">
     <div id="5"class="tip-percentage">5%</div>
     <div id="10"class="tip-percentage">10%</div>
@@ -44,7 +44,7 @@
   </div>
 </div>
 <div>
-  <h1 id="title-responsive"class="title-calc">Number of People</h1>
+  <h1 id="title-responsive"class="title-calc">Number of People<span id="people-error" class="error"></span></h1>
   <div class="container-input">
     <img class="icon" src="./images/icon-person.svg" alt="Person Icon">
   <input id="people" class="number-input" type="number" placeholder="0">
