--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   <h1 class="title-calc">Bill<span id="bill-error"  class="error"></span></h1>
   <div class="container-input">
     <img class="icon" src="./images/icon-dollar.svg" alt="Dollar Sign Icon">
-  <input id="bill" class="number-input" type="number" placeholder="0">
+  <input id="bill" class="number-input" type="tel" placeholder="0">
 </div>
 </div>
 <div>
@@ -35,7 +35,7 @@
     <div id="15"class="tip-percentage">15%</div>
     <div id="25"class="tip-percentage">25%</div>
     <div id="50"class="tip-percentage">50%</div>
-    <input id="custom" class="tip-custom" type="number" placeholder="Custom">
+    <input id="custom" class="tip-custom" type="tel" placeholder="Custom">
 
 
 
@@ -47,7 +47,7 @@
   <h1 id="title-responsive"class="title-calc">Number of People<span id="people-error" class="error"></span></h1>
   <div class="container-input">
     <img class="icon" src="./images/icon-person.svg" alt="Person Icon">
-  <input id="people" class="number-input" type="number" placeholder="0">
+  <input id="people" class="number-input" type="tel" placeholder="0">
 </div>
 </div>
 </fieldset>
