--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" maximum-scale=1> <!-- displays site properly based on user's device -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
   <link rel="stylesheet" href="style.css">
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   <script src="script.js" defer></script>
@@ -21,21 +21,21 @@
     
     <fieldset class="container-calc">
       <div>
-  <h1 class="title-calc">Bill<span id="bill-error"  class="error"></span></h1>
+  <h1 class="title-calc">Bill<span id="bill-error" class="error"role="alert"></span></h1>
   <div class="container-input">
     <img class="icon" src="./images/icon-dollar.svg" alt="Dollar Sign Icon">
-  <input id="bill" class="number-input" type="tel" placeholder="0">
+  <input id="bill" class="number-input" type="number" placeholder="0">
 </div>
 </div>
 <div>
-  <h1 id="title-responsive"class="title-calc">Select Tip %<span id="tip-error" class="error"></span></h1>
+  <h1 id="title-responsive" class="title-calc">Select Tip %<span id="tip-error" class="error" role="alert"></span></h1>
   <div class="container-percentage">
     <div id="5"class="tip-percentage">5%</div>
     <div id="10"class="tip-percentage">10%</div>
     <div id="15"class="tip-percentage">15%</div>
     <div id="25"class="tip-percentage">25%</div>
     <div id="50"class="tip-percentage">50%</div>
-    <input id="custom" class="tip-custom" type="tel" placeholder="Custom">
+    <input id="custom" class="tip-custom" type="number" placeholder="Custom">
 
 
 
@@ -44,10 +44,10 @@
   </div>
 </div>
 <div>
-  <h1 id="title-responsive"class="title-calc">Number of People<span id="people-error" class="error"></span></h1>
+  <h1 id="title-responsive"class="title-calc">Number of People<span id="people-error" class="error" role="alert"></span></h1>
   <div class="container-input">
     <img class="icon" src="./images/icon-person.svg" alt="Person Icon">
-  <input id="people" class="number-input" type="tel" placeholder="0">
+  <input id="people" class="number-input" type="number" placeholder="0">
 </div>
 </div>
 </fieldset>
